[package]
name = "l1276-rust-bot"
version = "0.1.0"
authors = ["typas <h86416@gmail.com>"]
description = "A Bot for own Discord Server"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Typas/L1276-rust-bot.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "l1276"
path = "src/lib.rs"

[dependencies]
serenity = "0.8"
dotenv = "0.15"
regex = "1"
