[package]
name = "l1276-rust-bot"
version = "0.3.0"
authors = ["Typas <typascake@gmail.com>"]
description = "A Bot for own Discord Server"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Typas/L1276-rust-bot.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "l1276"
path = "src/lib.rs"

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
serenity = "0.10"
dotenv = "0.15"
regex = "1"
